deleted margins for who document

--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 
 <body>
 
-
-</body>
     <nav class="navbar justify-content-center">
        <a href="#" class="nav-item nav-link active">Home</a>
        <a href="#" class="nav-item nav-link">About</a>
        <a href="#" class="nav-item nav-link">Authors</a>
        <a href="#" class="nav-item nav-link">Sights</a>
     </nav>
+
+<div class="div">
+Why isn't this working?
+</div>
+
+
+</body>
 
 </html>
 
