added hero image with html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
        <a href="#" class="nav-item nav-link">Sights</a>
     </nav>
 
-<div class="div">
-Why isn't this working?
-</div>
+    <section>
+        <div>
+                <img id="hero-image" src="assets/images/edinburgh.jpg" alt="Edinburgh from Calton Hill">
+                <p>Welcome to Edinburgh</p>
+        </div>
+    </section>
 
 
 </body>
