--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section>
-        <div>
+        <div class="wrapper">
                 <img id="hero-image" src="assets/images/edinburgh.jpg" alt="Edinburgh from Calton Hill">
                 
         </div>
